--- a/httpd-centos/Dockerfile
+++ b/httpd-centos/Dockerfile
@@ -1,7 +1,7 @@
 FROM centos
 RUN yum install -y httpd
-CMD apachectl -DFOREGROUND
-COPY sitio /var/www/html
+WORKDIR /var/www/html
+COPY sitio .
 ENV contenido prueba
 RUN echo "$contenido" > /var/www/html/prueba.html
 CMD apachectl -DFOREGROUND
